Fix menu z-index

--- a/static/map/style.css
+++ b/static/map/style.css
@@ -101,7 +101,7 @@ div#top_links {
 
   vertical-align: middle;
   text-align: center;
-  z-index: 1000;
+  z-index: 2000;
 }
 
 #topmenu {
